k8s-manifests/redis.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: nodebb
  labels:
    app: nodebb
spec:
  selector:
    matchLabels:
      app: nodebb
      tier: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nodebb
        tier: redis
    spec:
      containers:
        - image: redis
          name: redis
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: redis-persistent-storage
              mountPath: /data
          resources:
            limits:
              cpu: '1'
              memory: '1Gi'
            requests:
              cpu: '500m'
              memory: '1Gi'
      volumes:
        - name: redis-persistent-storage
          persistentVolumeClaim:
            claimName: redis-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: nodebb
  labels:
    app: nodebb
spec:
  ports:
    - port: 6379
  selector:
    app: nodebb
    tier: redis
  clusterIP: None
